--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="keaton.moneybank" >
+    package="keaton.moneybank">
 
     <uses-permission android:name="android.permission.INTERNET" />
 
@@ -8,11 +8,11 @@
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
+        android:theme="@style/AppTheme">
         <activity
             android:name=".ListActivity"
-            android:screenOrientation="portrait"
-            android:label="@string/title_activity_list" >
+            android:label="@string/title_activity_list"
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -21,10 +21,22 @@
         </activity>
         <activity
             android:name=".ReportActivity"
-            android:screenOrientation="portrait"
-            android:label="@string/title_activity_report" >
-        </activity>
-        <meta-data android:name="com.crashlytics.ApiKey" android:value="456e65b7d711a1260b765695d6684b4b92df8b96"/>
+            android:label="@string/title_activity_report"
+            android:screenOrientation="portrait"></activity>
+
+        <meta-data
+            android:name="com.crashlytics.ApiKey"
+            android:value="456e65b7d711a1260b765695d6684b4b92df8b96" />
+
+        <receiver android:name=".MoneyBankWidget">
+            <intent-filter>
+                <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
+            </intent-filter>
+
+            <meta-data
+                android:name="android.appwidget.provider"
+                android:resource="@xml/money_bank_widget_info" />
+        </receiver>
     </application>
 
 </manifest>
