--- a/app/build.gradle
+++ b/app/build.gradle
@@ -17,13 +17,13 @@ repositories {
 
 android {
     compileSdkVersion 21
-    buildToolsVersion "21.1.2"
+    buildToolsVersion '25.0.0'
     defaultConfig {
         applicationId "keaton.moneybank"
         minSdkVersion 21
         targetSdkVersion 21
-        versionCode 2
-        versionName "1.1"
+        versionCode 3
+        versionName "1.3"
     }
     buildTypes {
         release {
@@ -42,4 +42,5 @@ dependencies {
     compile 'com.j256.ormlite:ormlite-core:4.48'
     compile 'com.j256.ormlite:ormlite-android:4.48'
     compile 'com.crashlytics.android:crashlytics:1.+'
+    compile 'com.android.support:support-v4:21.0.3'
 }
