--- a/local.properties
+++ b/local.properties
@@ -7,5 +7,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Wed Jan 14 12:22:31 MSK 2015
-sdk.dir=D\:\\Android\\android_sdk
+#Wed Mar 16 21:50:52 MSK 2016
+sdk.dir=D\:\\Android\\android-sdk
